# dev-assistant

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  PROGRESS.md  README.md  README.zh.md  claude_session_manager.py  cost-center.html  cron.html  cron_task_manager.py  index.html  manage.sh  pyproject.toml  requirements.txt  server.py  settings.html  vcs_provider.py
.agents/skills/commit/: SKILL.md
.agents/skills/finishing-feature/: SKILL.md
.claude/: settings.json
.gitlab/: config.yml.example
static/css/: app.css  style.css
static/js/: app.js  header.js
