[project]
name = "dev-assistant"
version = "0.1.0"
description = "Automated development task management powered by Claude Code"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.103.1",
    "uvicorn>=0.23.2",
    "pydantic>=2.0.0",
    "croniter>=1.3.0",
]

[project.scripts]
serve = "server:main"

[tool.ruff]
line-length = 110

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
